[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsecheck_py"
version = "0.1.3"
description = "Unified health/ready endpoints + checks for services (Django/FastAPI)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Tase Nikol", email="anikolaou.ph@gmail.com"}]
license = {text = "MIT"}
dependencies = []

[project.urls]
Repository = "https://github.com/tase-nikol/pulsecheck-py"

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
django = ["Django>=4.2"]
redis_async = ["redis>=5.0"]
redis_sync = ["redis>=5.0"]
rabbitmq = ["kombu>=5.3"]
celery = ["celery>=5.3"]
sqlalchemy_async = ["SQLAlchemy>=2.0"]
http = ["httpx>=0.24"]

all = [
  "fastapi>=0.100",
  "Django>=4.2",
  "redis>=5.0",
  "kombu>=5.3",
  "celery>=5.3",
  "SQLAlchemy>=2.0",
  "httpx>=0.24"
]

[tool.setuptools]
packages = ["pulsecheck_py"]
